[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/ChooseLanguage.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Bender/Jovanny Lemonad - Bender-Italic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/textures/gui_britan_flag.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/DefaultFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/textures/gui_russian_flag.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/gui_indian_flag.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/HindiFont.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/textures/up-arrow.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[node name="SettingsPanel" type="Panel"]
margin_top = -1.0
margin_right = 1280.0
margin_bottom = 719.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Language" type="Node" parent="."]

[node name="Label" type="Label" parent="Language"]
margin_top = 1.0
margin_right = 1280.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "Choose language:"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Language"]
editor/display_folded = true
margin_top = 71.0
margin_right = 1280.0
margin_bottom = 231.0
custom_constants/separation = 8
alignment = 1

[node name="EnglishLanguage" type="TextureButton" parent="Language/HBoxContainer"]
margin_left = 272.0
margin_right = 512.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="Language/HBoxContainer/EnglishLanguage"]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 231.0
custom_fonts/font = ExtResource( 4 )
text = "English
"
align = 1

[node name="RussianLanguage" type="TextureButton" parent="Language/HBoxContainer"]
margin_left = 520.0
margin_right = 760.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="Language/HBoxContainer/RussianLanguage"]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 4 )
text = "Русский"
align = 1

[node name="HindiLanguage" type="TextureButton" parent="Language/HBoxContainer"]
margin_left = 768.0
margin_right = 1008.0
margin_bottom = 160.0
rect_min_size = Vector2( 240, 160 )
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="Label" type="Label" parent="Language/HBoxContainer/HindiLanguage"]
margin_top = 160.0
margin_right = 240.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 7 )
text = "हिन्दी"
align = 1

[node name="UpArrow" type="Sprite" parent="Language"]
position = Vector2( 880, 280 )
texture = ExtResource( 8 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 1150.0
margin_top = 640.0
margin_right = 1260.0
margin_bottom = 699.0
custom_fonts/font = ExtResource( 4 )
text = "Save"

[connection signal="pressed" from="Language/HBoxContainer/EnglishLanguage" to="." method="_on_EnglishLanguage_pressed"]
[connection signal="pressed" from="Language/HBoxContainer/RussianLanguage" to="." method="_on_RussianLanguage_pressed"]
[connection signal="pressed" from="Language/HBoxContainer/HindiLanguage" to="." method="_on_HindiLanguage_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_SaveButton_pressed"]
